<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:apiKey="AIzaSyAagh0hgZUPXoMS5Ynly_P7M_mbVzRi3hg9" />
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XP"
            android:layout_alignParentStart="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/attack1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack1"
                android:onClick="attackOnePressed"/>
            <Button
                android:id="@+id/attack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack2"
                android:onClick="attackTwoPressed"/>
        </LinearLayout>

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>